--- a/README.Rmd
+++ b/README.Rmd
@@ -63,7 +63,7 @@ chat$chat("Give me a weather update for Chicago for tonight. What should I wear?
 #> Enjoy your evening!
 ```
 
-### Get current temperature
+### Get temperature
 
 ```{r get-temperature}
 #| eval: FALSE
@@ -73,7 +73,7 @@ chat$chat("What is the current temperature in New York City in Fahrenheit?")
 #> The current temperature in New York City is approximately 19.1°C, which is  about 66.4°F.
 ```
 
-### Get current date/time
+### Get date/time
 
 ```{r get-current-time}
 #| eval: FALSE
@@ -85,7 +85,7 @@ chat$chat("What day is it?")
 #> Today is June 1, 2025.
 ```
 
-### Get current location
+### Get location
 
 ```{r get-current-location}
 #| eval: FALSE
@@ -95,7 +95,7 @@ chat$chat("Where am I right now? What is my approximate location?")
 #> Your approximate location is Beverly Hills, California, USA. The postal code is 90210, and you are in the America/Los_Angeles time zone.
 ```
 
-### Get current working directory
+### Get working directory structure and contents
 
 ```{r get-current-wd}
 #| eval: FALSE
