--- a/README.Rmd
+++ b/README.Rmd
@@ -10,8 +10,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "man/figures/README-",
   out.width = "100%",
-  tidy.opts = list(width.cutoff = 80), 
-  tidy = TRUE
+  tidy.opts = list(width.cutoff = 80)
 )
 ```
 
